--- a/Portfolio/yuntongchen_portfolio.css
+++ b/Portfolio/yuntongchen_portfolio.css
@@ -13,7 +13,7 @@ font-style:oblique;
 font-size:18px;}
 .column{position:absolute;
     top:45px;
-    left:700px;
+    left:45%;
     font-family: 'Heebo', sans-serif;
     font-size:18px;}
 .description{position:fixed;
@@ -44,11 +44,28 @@ font-size:15px;
 font-style:normal;}
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
         div.column {position:absolute;
-  opacity:0%;
-        }
-              }
+            left:5%;
+   opacity:0%;}
+  div.imagecontainer{position:absolute;
+left:4%;
+max-width:25%;}
+.fixedname{position:absolute;
+    left:4%;
+    font-size:30pt;}
+.body{background-color:black;}
+.caption{font-size:12pt;
+opacity:0%;
+left:5%;}
+.description{position:absolute;
+top:10%;
+left:5%;
+width:400px;}
+
+}
+
+    
               @media screen and (min-width:768px) { 
                 div#information p{font-size:15px;
                 left:70%;}} 
